assets/css/styles.css
/*------------ Globals -----------------*/
:root {
  --back1: #65daf7;
  --back2: #27ccf5;
  --back3: #06a4cc;
}
/*------------ Media Queries -----------------*/
@media (max-width: 1024px) {
  body {
    font-size: 15px;
  }
}
@media (max-width: 768px) {
  body {
    font-size: 12px;
  }
}
@media (max-width: 468px) {
  body {
    font-size: 5px;
  }

  .main-items .item1 {
    display: flex;
    flex-wrap: wrap;
  }
}
/*------------ Main Body -----------------*/
.main-body {
  display: flex;
  height: 3500px;
  font-family: "IBM Plex Sans", sans-serif !important;
}

.main-items {
  width: 75%;
}

.main-items > div:nth-child(1) {
  height: 15%;
}

.main-items > div:nth-child(n + 2) {
  height: 28.3%;
}

/*------------ NavBar -----------------*/
.nav-bar {
  width: 25%;
  background-color: var(--back1);
}

.nav-bar .profile-pic {
  margin: 1em 0 0 0;
  align-items: center;
}

.nav-bar img {
  border-radius: 50%;
}

.nav-bar .profile-contact {
  text-align: center;
}

.nav-bar .profile-contact > a {
  margin: 0 1em 0 1em;
  text-decoration: none;
}

.nav-bar .nav-link:hover {
  text-decoration: underline;
  font-weight: bold;
}

/*------------ About -----------------*/
.main-items .item1 {
  display: flex;
}

.main-items .logo {
  width: 50%;
  background-color: var(--back1);
}

.main-items .bio {
  width: 50%;
  background-color: var(--back2);
}

/*------------ Work Experience -----------------*/
.main-items .item2 {
  background-color: var(--back3);
}

.main-items .item2 .card > img {
  max-width: 25%;
  max-height: 25%;
}

/*------------ Projects -----------------*/
.main-items .item3 {
  background-color: var(--back2);
}

/*------------ Contacts -----------------*/
.main-items .item4 {
  background-color: var(--back3);
}

